<resources>
    <string name="app_name">HearthStoneApp</string>

    <string name="classes">Classes</string>
    <string name="sets">Sets</string>
    <string name="types">Types</string>
    <string name="factions">Factions</string>
    <string name="qualities">Qualities</string>
    <string name="races">Races</string>
    <string name="locales">Locales</string>

    <string name="label_name">Name: %s</string>
    <string name="label_flavor">Flavor: %s</string>
    <string name="label_set">Set: %s</string>
    <string name="label_faction">Faction: %s</string>
    <string name="label_rarity">Rarity: %s</string>
    <string name="label_attack">Attack: %s</string>
    <string name="label_cost">Cost: %s</string>
    <string name="label_health">Health: %s</string>
</resources>